[gd_scene load_steps=6 format=3 uid="uid://b8xq4tdcfwxol"]

[ext_resource type="Texture2D" uid="uid://b4akfd2js1ns1" path="res://sprites/inventory_slot.png" id="1_fs6yy"]
[ext_resource type="Script" uid="uid://yip42bngxu0v" path="res://scripts/shop_ui.gd" id="1_s287r"]
[ext_resource type="Texture2D" uid="uid://bw0285b4q0442" path="res://sprites/sell_button.png" id="2_0yw5g"]
[ext_resource type="Texture2D" uid="uid://d0usupe0ampya" path="res://sprites/sell_button_pressed.png" id="3_s287r"]
[ext_resource type="Texture2D" uid="uid://btmyvrvdph6gp" path="res://sprites/sell_button_hovered.png" id="4_mrnm2"]

[node name="ShopUI" type="Control"]
layout_mode = 3
anchor_right = 0.104
anchor_bottom = 0.093
offset_right = 0.31999207
offset_bottom = -0.44000244
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s287r")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(200, 100)
layout_mode = 0
offset_right = 128.0
offset_bottom = 64.0
texture = ExtResource("1_fs6yy")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="BoxContainer" type="BoxContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
vertical = true

[node name="GridContainer" type="GridContainer" parent="NinePatchRect/BoxContainer"]
layout_mode = 2

[node name="SellContainer" type="BoxContainer" parent="NinePatchRect/BoxContainer"]
layout_mode = 2
alignment = 1

[node name="SellButton" type="TextureButton" parent="NinePatchRect/BoxContainer/SellContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("2_0yw5g")
texture_pressed = ExtResource("3_s287r")
texture_hover = ExtResource("4_mrnm2")

[node name="NinePatchRect" type="NinePatchRect" parent="NinePatchRect/BoxContainer/SellContainer"]
custom_minimum_size = Vector2(64, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_fs6yy")
region_rect = Rect2(0, 0, 34, 18)
patch_margin_left = 7
patch_margin_top = 7
patch_margin_right = 7
patch_margin_bottom = 7

[node name="SlotToSell" type="Label" parent="NinePatchRect/BoxContainer/SellContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -7.5
offset_top = -18.0
offset_right = 7.5
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.32252148, 0.6013981, 5.7756904e-07, 1)
theme_override_colors/font_shadow_color = Color(0.19877908, 0.32824066, 0.1576829, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 24
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="NinePatchRect/BoxContainer/SellContainer/SellButton" to="." method="_on_sell_button_pressed"]
